# xbot2

./: xbot
talker/: .gitignore  CMakeLists.txt  package.xml
talker/assets/: dictionary.txt  grammar.bnf  hotwords.txt
talker/build-src-Desktop_Qt_5_7_1_GCC_64bit-Default/: Makefile  Project.cbp  cmake_install.cmake
talker/launch/: talker.launch
talker/src/: Talker.cpp  main.cpp
xbot2_tools/: CMakeLists.txt
xbot2_tools/scripts/: keyboard_control.py
xbot2_tools/src/: CMakeLists.txt  camera_pusher.cpp
xbot_arm/: CMakeLists.txt  mainpage.dox  manifest.xml
xbot_arm/src/: nodelet.cpp
xbot_arm/urdf/: arm.urdf
xbot_bringup/launch/: sick.launch  sick571.launch  xbot.launch  xbot2-websocket.launch  xbot_rplidar_websocket.launch  xbot_sick_websocket.launch  xbot_websocket.launch
xbot_description/: package.xml
xbot_description/urdf/: robot.xacro  sick_tim.urdf.xacro  xbot2.gazebo  xbot2.urdf.xacro
xbot_keyop/: CMakeLists.txt
xbot_msgs/: CMakeLists.txt
xbot_msgs/msg/: Echos.msg  FaceResult.msg  InfraRed.msg  XbotState.msg
xbot_navigoals/scripts/: coll_position_dic.yaml  face_recog.py  office_lady.py  office_slam.py  test.py  ubox_register.py  ubox_sample.py
xbot_navigoals/src/: navigoal_core.cpp
xbot_safety_controller/: package.xml
xbot_simulation/: CMakeLists.txt  package.xml
xbot_simulation/launch/: xbot_in_stage.launch
xbot_slam/launch/: xbot_rplidar_amcl.launch  xbot_sick_amcl.launch
xbot_slam/param/: amcl_config.yaml  costmap_common_params.yaml
xbot_slam/rviz/: xbot_slam.rviz
xbot_tools/: CMakeLists.txt  package.xml
(+20 files in other folders)
